# SimObliterator_Suite

./: .gitignore  CHANGELOG.md  Full_Test_Example.txt  LICENSE  Oh damn, okay! So he's already buil.txt  README.md  TODO.md  What this test run could prove.txt  index.html  launch.py  obliterator.py  requirements.txt
.github/scripts/: resolve-vitamoospace-pages-site.mjs
.github/workflows/: pages.yml
Docs/: ACTION_MAP.md  ACTION_SURFACE.md  INTEGRATION_GAPS.md  PRIMITIVE_REFERENCE.md  TECHNICAL_REFERENCE.md  UI_DEVELOPER_GUIDE.md
Docs.off/: MONOREPO-LAYOUT.md
Docs.off/guides/: BLENDER_EXPORTER_GUIDE.md  UI_INTEGRATION_CHECKLIST.md
Docs.off/research/: ENGINE_PRIMITIVES.md  VALIDATION_TRUST_GUIDE.md
Docs.off/technical/: ACTION_SURFACE.md  TECHNICAL_REFERENCE.md
data/: characters.json  execution_model.json  global_behavior_database.json  global_behaviors.json  meshes.json  objects.json  opcodes_db.json  unknowns_db.json
dev/: BUILD.md  README.md  headless_examples.py  pyproject.toml  real_game_tests.py  test_suite.py  version_info.txt
dev/tests/: action_coverage.py  real_game_tests.py  test_api.py  test_game.py  test_paths.txt  test_persondata.py  tests.py
docs/: ACTION_MAP.md  ACTION_SURFACE.md  CNAME  INTEGRATION_GAPS.md  MONOREPO-LAYOUT.md  animation.d.ts  animation.js  animation.js.map  content.json  index.html  parser.d.ts  parser.js  parser.js.map  reader.d.ts  reader.js  reader.js.map  renderer.d.ts  renderer.js  renderer.js.map  skeleton.d.ts  skeleton.js  skeleton.js.map  texture.d.ts  texture.js  texture.js.map  types.d.ts  types.js  types.js.map  viewer.css  viewer.js  vitamoo.d.ts  vitamoo.js  vitamoo.js.map
src/: __init__.py  main_app.py
vitamoo/: DOCUMENTATION.md  README.md  REFACTOR-PLAN.md  package-lock.json  package.json  tsconfig.json
(+309 files in other folders)
