[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simobliterator-suite"
version = "1.0.0"
description = "Professional IFF Editor & Analyzer for The Sims 1"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dnf_Jeff"}
]
keywords = [
    "sims", "modding", "iff", "game-files", "editor", 
    "analyzer", "simantics", "bhav"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Utilities",
]

dependencies = [
    "dearpygui>=1.10.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]
images = [
    "Pillow>=10.0.0",
]

[project.urls]
"Homepage" = "https://github.com/dnf-jeff/simobliterator"
"Bug Tracker" = "https://github.com/dnf-jeff/simobliterator/issues"

[project.scripts]
simobliterator = "launch:main"

[project.gui-scripts]
simobliterator-gui = "launch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["Tools*", "formats*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.ico", "*.png"]

[tool.pyinstaller]
name = "SimObliterator"
onefile = true
windowed = true
icon = "assets/icon.ico"
